2004-11-11 Maarten Brock <sourceforge.brock AT dse.nl>
	* src/SDCCmain.c (linkEdit): don't suppress crt0 if --nostdlib is used
	  and search crt0.o in all library paths,
	  (setIncludePath): proper handling of --nostdinc,
	  (setLibPath): proper handling of --nostdlib
	* support/regression/Makefile,
	* support/regression/ports/ds390/spec.mk,
	* support/regression/ports/gbz80/spec.mk,
	* support/regression/ports/hc08/spec.mk,
	* support/regression/ports/mcs51/spec.mk,
	* support/regression/ports/mcs51-large/spec.mk,
	* support/regression/ports/mcs51-stack-auto/spec.mk,
	* support/regression/ports/z80/spec.mk: use include and lib files from
	  built version of sdcc instead of installed version
	* doc/sdccman.lyx: fixed typo in --nostdinc

2004-11-10 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/pcode.c,
	* src/pic/device.c,
	* src/pic/ralloc.c,
	* src/pic/gen.c : added support to generate code for struct bit fields.

2004-11-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/xa51/xa_version.h,
	* device/include/errno.h,
	* device/include/regc515c.h,
	* device/lib/_itoa.c,
	* device/lib/_ltoa.c,
	* device/lib/ser_ir_cts_rts.c,
	* sim/ucsim/xa.src/glob.cc,
	* sim/ucsim/xa.src/inst_gen.cc,
	* sim/ucsim/xa.src/xa_bit.cc,
	* sim/ucsim/xa.src/xa_sfr.cc,
	* sim/ucsim/z80.src/inst_dd.cc,
	* sim/ucsim/z80.src/inst_fdcb.cc,
	* support/scripts/keil2sdcc.pl,
	* src/pic16/pic16.dsp,
	* src/pic16/pic16a.dsp: corrected cvs line endings
	* device/lib/printf_large.c: fixed bug 1057979
	* src/pic16/gen.c: fixed non-C standard code
	* src/SDCCmain.c: made --pack-iram default, added --no-pack-iram
	* src/SDCCglobl.h: changed pack_iram to no_pack_iram
	* support/regression/ports/mcs51/support.c: reload T1 asap
	* doc/sdccman.lyx: updated for options --pack-iram and --no-pack-iram,
	  pdata use and clear idata startup behaviour
	* support/regression/tests/bug1057979.c: added

2004-11-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/examples/ds390/ow390/ad26.h,